--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
     
     <ul class="list-group">
           <li class="list-group-item d-flex justify-content-between align-items-center">
-              Department
             <span class="badge badge-primary badge-pill">14</span>
           </li>
         </ul>
@@ -57,12 +56,13 @@
             var clone = $(".list-group").clone();
             // update values
             clone.find(".list-group-item").text(v.department);
-            clone.removeClass("list-group-item");
+            clone.removeClass("list-group");
+
 
             // insert into DOM
             $("body").append(clone);
           });
-  
+      })
     });
 	</script>
 
